<resources>
    <string name="app_logo_description">Application logo</string>
    <string name="touch_to_start">Touch to start</string>
    <string name="app_name">Drag</string>
    <string name="nrOfRoundsStr">Number of Rounds:</string>
    <string name="nrOfPlayersStr">Number of Players:</string>
    <string name="startStr">Start</string>
    <string name="choose_mode">Game mode:</string>
    <string name="finishText">Finish</string>
    <string name="startText">Start</string>
    <string name="clearText">Clear</string>
    <string name="write_word">Draw the word: %s</string>
    <string name="guessWord">Guess the word!</string>
    <string name="word_to_guess">Word to guess:</string>
    <string name="playerTurn">Player %s\'s turn</string>
    <string name="endRound">End of Round %d</string>
    <string name="nextRound">Next Round</string>
    <string name="chooseAWord">Choose a word</string>
    <string name="gameOver">Game Over</string>
    <string name="settings">Game Settings:</string>
    <string name="localTxt">Local</string>
    <string name="onlineTxt">Online</string>
    <string name="name_hint_txt">Name</string>
    <string name="number_of_rounds_hint_txt">Number of Rounds</string>
    <string name="post_lobby_button">Post Lobby</string>
    <string name="number_of_players_hint_txt">Number of Players</string>
    <string name="error_creating_lobby">Could not create lobby.</string>
    <string name="create_lobby_button_txt">Create Lobby</string>
    <string name="error_getting_list">Couldn\'t get list of lobbies.</string>
    <string name="enter_lobby_dialog_ok">OK</string>
    <string name="enter_lobby_dialog_cancel">Cancel</string>
    <string name="enter_lobby_dialog_title">Enter %s\'s lobby?</string>
    <string name="lobby_creator">Lobby Creator: </string>
    <string name="lobby_nr_of_players">Number Of Players: </string>
    <string name="lobby_nr_of_rounds">Number Of Rounds: </string>
    <string name="refresh_text">Refresh</string>
    <string name="about_text">About</string>
    <string name="insert_name">What\'s your username?</string>
    <string name="waiting_Txt">Please standby.</string>
    <string name="waiting_for_other_players">Waiting for other players...</string>
    <string name="error_accepting_lobby">Failed to enter lobby.</string>
    <string name="error_missing_nrOfPlayers">Number of players is a required value.</string>
    <string name="error_missing_nrOfRounds">Rounds is a required value.</string>
    <string name="error_minimum_players">The minimum number of players is 5!</string>
    <string name="error_minimum_rounds">The minimum number of rounds is 1!</string>
    <string name="error_getting_words">Error getting randomWords</string>
    <string name="loading_random_words">Loading random words.</string>

</resources>