<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/choose_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_mode"
        android:textSize="60sp"
        android:layout_marginTop="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
    />

    <LinearLayout
        android:layout_width="261dp"
        android:layout_height="357dp"
        android:layout_marginStart="72dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choose_msg"
        app:layout_constraintVertical_bias="0.422">

        <Button
            android:id="@+id/localButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:text="@string/localTxt"
            android:textSize="28sp" />

        <Button
            android:id="@+id/multi_player_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:text="@string/onlineTxt"
            android:textSize="28sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>